fix white space

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -251,7 +251,7 @@ a {
   flex-direction: column;
   background: white;
   margin: 0 auto;
-  margin-top: 96px;
+  margin-top: 16px;
   img {
     max-width: 100%;
     object-fit: contain;
